Footer's alignment corrected

--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,5 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
+    border: 1px solid red;
 }
